<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <Button
        android:id="@+id/bnForums"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseForums" />

    <Button
        android:id="@+id/bnMessages"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/messageList" />

    <Button
        android:id="@+id/bnCleanUsersRowVersion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Clean Users rowVersion" />

    <Button
        android:id="@+id/bnCleanMessagesRowVersion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Clean Messages rowVersion" />

    
    
</LinearLayout>