<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:drawable/screen_background_light"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/subjectEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences|textEmailSubject"
         >
        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/tbWrap"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_weight="0.1" >

            <RelativeLayout 
                android:id="@+id/controlBar"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/command_bar_height"
                android:paddingLeft="4dip"
                android:paddingRight="4dip"
                >
                
                <ToggleButton
                    android:id="@+id/bold"
                    android:layout_width="@dimen/format_bar_button_width"
                    android:layout_height="fill_parent"
                    android:background="@drawable/button_toggle"
                    android:textColor="#464646"
                    android:textOff="@string/bold"
                    android:textOn="@string/bold"
                    android:textSize="@dimen/format_bar_font_size"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/em"
                    android:layout_width="@dimen/format_bar_button_width"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@id/bold"
                    android:background="@drawable/button_toggle"
                    android:textColor="#464646"
                    android:textOff="@string/italic"
                    android:textOn="@string/italic"
                    android:textSize="@dimen/format_bar_font_size"
                    android:textStyle="italic" />

                <ToggleButton
                    android:id="@+id/underline"
                    android:layout_width="@dimen/format_bar_button_width"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@id/em"
                    android:background="@drawable/button_toggle"
                    android:textColor="#464646"
                    android:textOff="@string/underline"
                    android:textOn="@string/underline"
                    android:textSize="@dimen/format_bar_font_size" />

                <ToggleButton
                    android:id="@+id/strike"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@id/underline"
                    android:background="@drawable/button_toggle"
                    android:textColor="#464646"
                    android:textOff="@string/strike"
                    android:textOn="@string/strike"
                    android:textSize="@dimen/format_bar_font_size" />
                
            </RelativeLayout>

        </HorizontalScrollView>

        <ImageButton
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:background="@drawable/button_toggle"
            android:src="@drawable/ic_menu_save" />
    </LinearLayout>

    <com.agorikov.rsdnhome.common.MessageEditText
        android:id="@+id/messageBodyEdit"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="fill_horizontal"
        
        android:inputType="textCapSentences|textLongMessage|textMultiLine"
        android:imeOptions="flagNoExtractUi"
        android:background="@android:drawable/editbox_background"
         >
    </com.agorikov.rsdnhome.common.MessageEditText>

</LinearLayout>